--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                             </div>
                                         </div>
                                         <div class="row mt-8">
-                                            <div class="col-full">
+                                            <div class="col col-full">
                                                 <input type="text" name="" placeholder="Message" required id="" class="form-control">
                                         </div>
                                         <input class="form-submit-btn mt-16" type="submit" value="SEND">
@@ -162,7 +162,7 @@
                 </div>
                 <p class="copyright">Powered by <a href="">w3.css</a></p>
             </div>
-            
+            <!-- JAVASCR -->
         </div>
         <div class="modal">
             <div class="modal-container js-modal-container">
